<resources>
    <string name="app_name">mlps</string>
    <string name="action_settings">Settings</string>
    <string name="desc">image view</string>
    <string name="listItemTitle"> List Item Title</string>
    <string name="copyright">Copyright snapschool 2015</string>
    <string name="signIn">Sign In</string>
    <string name="forgotPassword">Forgot Password?</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="welcome">Welcome</string>
    <string name="username">Username</string>
    <string name="date">Date</string>
    <string name="totalStudent">Total student</string>
    <string name="totalTeacher">Total teacher</string>
    <string name="totalParent">Total parent</string>
    <string name="attendance">Attendance</string>
    <string name="title_activity_forgot_password">ForgotPasswordActivity</string>
    <string name="enterEmail">Enter your email address</string>
    <string name="resetPassword">Submit</string>
    <string name="title_activity_user_list">UserListActivity</string>
    <string name="usertype">User Type</string>
    <string name="classname">Class name</string>
    <string name="title_activity_user_profile">UserProfileActivity</string>
    <string name="title_activity_student_profile">StudentProfileActivity</string>
    <string name="studentProfile">Profile</string>
    <string name="studentMarks">Marks</string>
    <string name="title_activity_subjects">SubjectsActivity</string>
    <string name="subjects">Subjects</string>
    <string name="title_activity_class_routine">ClassRoutineActivity</string>
    <string name="classRoutine">Class Routine</string>
    <string name="sunday">Sun</string>
    <string name="monday">Mon</string>
    <string name="tuesday">Tue</string>
    <string name="wednesday">Wed</string>
    <string name="thursday">Thu</string>
    <string name="friday">Fri</string>
    <string name="saturday">Sat</string>
    <string name="dash">-</string>
    <string name="title_activity_attendance">AttendanceActivity</string>
    <string name="view">View</string>
    <string name="selectDate">Select date</string>
    <string name="title_activity_exam_marks">ExamMarksActivity</string>
    <string name="examMarks">Exam Marks</string>
    <string name="title_activity_accounting">AccountingActivity</string>
    <string name="accounting">Accounting</string>
    <string name="income">Income</string>
    <string name="expense">Expense</string>
    <string name="title_activity_my_profile">MyProfileActivity</string>
    <string name="manageProfile">Manage profile</string>
    <string name="changePassword">Change password</string>
    <string name="name">Name</string>
    <string name="title_activity_noticeboard">NoticeboardActivity</string>
    <string name="eventCalendar">Event calendar</string>
    <string name="eventPageBottomHint">Tap on a highlighted day to view event details</string>
    <string name="update">Update</string>
    <string name="currentPassword">Current password</string>
    <string name="newPassword">New password</string>
    <string name="confirmNewPassword">Confirm new password</string>
    <string name="title_activity_student_accounting">StudentAccounting</string>
    <string name="title_activity_student_exam_marks">StudentExamMarksActivity</string>
    <string name="updateImage">Update image</string>
    <string name="updateImageDone">Update</string>
    <string name="updateImageCancel">Cancel</string>
</resources>
