<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.snapschool.mlps.NoticeboardActivity">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.2"
        android:background="@drawable/common_gradient">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/eventCalendar"
            android:textColor="#000000"
            android:textSize="20sp"
            android:id="@+id/title_textView"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true" />

        <Spinner
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/noticeboard_month_spinner"
            android:layout_below="@+id/title_textView"
            android:layout_alignLeft="@+id/title_textView"
            android:layout_alignStart="@+id/title_textView"
            android:layout_alignRight="@+id/title_textView"
            android:layout_alignEnd="@+id/title_textView"
            android:layout_alignParentBottom="true"
            android:spinnerMode="dialog"/>

    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.8"
        android:background="#FAFAFA">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:background="#EBEBEB"
            android:id="@+id/weekdayNames_layout">
            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:textColor="#000000"
                android:textSize="16sp"
                android:text="@string/sunday"
                android:gravity="center"/>
            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:textColor="#000000"
                android:textSize="16sp"
                android:text="@string/monday"
                android:gravity="center"/>
            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:textColor="#000000"
                android:textSize="16sp"
                android:text="@string/tuesday"
                android:gravity="center"/>
            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:textColor="#000000"
                android:textSize="16sp"
                android:text="@string/wednesday"
                android:gravity="center"/>
            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:textColor="#000000"
                android:textSize="16sp"
                android:text="@string/thursday"
                android:gravity="center"/>
            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:textColor="#000000"
                android:textSize="16sp"
                android:text="@string/friday"
                android:gravity="center"/>
            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:textColor="#000000"
                android:textSize="16sp"
                android:text="@string/saturday"
                android:gravity="center"/>
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:text="@string/eventPageBottomHint"
            android:id="@+id/bottom_textView"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:textColor="#000000"
            android:textSize="12sp"
            android:gravity="center"/>

        <GridView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/noticeboard_gridView"
            android:layout_above="@+id/bottom_textView"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/weekdayNames_layout"
            android:numColumns="7" />
    </RelativeLayout>

</LinearLayout>
