<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.snapschool.mlps.AttendanceActivity">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.2"
        android:background="@drawable/common_gradient">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/attendance"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true"
            android:textColor="#000000"
            android:textSize="20sp"/>
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.8">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:orientation="horizontal"
            android:background="#73767A"
            android:id="@+id/optionPicker_layout">
            <Button
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/selectDate"
                android:textAllCaps="false"
                android:textSize="14sp"
                android:background="@android:color/transparent"
                android:id="@+id/datePicker_button"
                android:onClick="datePickerButtonAction"/>
            <Spinner
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:id="@+id/attendanceClassSpinner"
                android:spinnerMode="dialog"
                android:textAlignment="center">
            </Spinner>
            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1">
                <Button
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:background="#2D95B8"
                    android:text="@string/view"
                    android:textSize="14sp"
                    android:textAllCaps="false"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="10dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginEnd="10dp"
                    android:onClick="viewButtonAction"/>
            </RelativeLayout>
        </LinearLayout>

        <ListView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/attendance_listView"
            android:layout_below="@+id/optionPicker_layout"
            android:layout_centerHorizontal="true"
            android:layout_alignParentBottom="true"
            android:background="#FAFAFA"
            android:divider="@android:color/darker_gray"
            android:dividerHeight="1dp"/>
    </RelativeLayout>

</LinearLayout>
